<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorBlueJean"
        android:textStyle="bold"
        android:fontFamily="@font/mitr_extralight"
        android:text="@string/ER1"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        />


    <LinearLayout
        android:id="@+id/SubtitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">



        <TextView
            android:id="@+id/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorBlueJean"
            android:textStyle="bold"
            android:fontFamily="@font/mitr_extralight"
            android:text="@string/ER2"
            android:gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="24dp"
        />
        <TextView
            android:id="@+id/findMore"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/mitr_extralight"
            android:layout_marginRight="0dp"
            android:gravity="right"
            android:text="@string/MK2"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlueJean"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="@color/colorGrapeFruit"
        android:textStyle="bold"
        android:fontFamily="@font/mitr_extralight"
        android:text="@string/ER5"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/SubtitleBar"
        />

    <ListView
        android:id="@+id/lvCurrnecy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title2"
        android:layout_marginBottom="50dp"></ListView>

    <include layout="@layout/buttom_navi"/>

</RelativeLayout>